Fix layout problem on bottom of the page of documentation section Add QVD config key changes tests for pre-existent tokens and customized ones

--- a/wat/style/components/_layout-setup.scss
+++ b/wat/style/components/_layout-setup.scss
@@ -31,6 +31,8 @@
         padding-left: 2%;
         margin-left: 2%;
     }
+    
+    margin-bottom: 60px;
 }
 
 .customize-section-selectors {
